...
                                <rect key="frame" x="0.0" y="114" width="600" height="200"/>
                                <autoresizingMask key="autoresizingMask"/>
                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="eO3-XG-GVG" id="ClE-cK-h4K">
                                    <rect key="frame" x="0.0" y="0.0" width="600" height="199"/>
                                    <autoresizingMask key="autoresizingMask"/>
                                    <subviews>
                                        <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tap to select location" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5cQ-GB-nVI">
                                            <rect key="frame" x="129" y="161" width="342" height="21"/>
                                            <constraints>
                                                <constraint firstAttribute="width" constant="342" id="5tu-fg-hEf"/>
                                            </constraints>
                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                            <color key="textColor" red="0.0" green="0.43529411764705883" blue="0.86274509803921573" alpha="1" colorSpace="calibratedRGB"/>
...
                    <toolbarItems>
                        <barButtonItem systemItem="cancel" id="8kh-xe-6YB">
                            <connections>
                                <segue destination="qcl-LR-vbT" kind="unwind" unwindAction="unwindToMainView:" id="hpP-jQ-1fr"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem title="Done" id="Iro-vB-ZyZ">
                            <connections>
                                <segue destination="qcl-LR-vbT" kind="unwind" unwindAction="unwindWithNewNotification:" id="YKa-2L-piF"/>
                            </connections>
                        </barButtonItem>
                    </toolbarItems>
                    <navigationItem key="navigationItem" title="New Notification" id="7Iz-HC-ZP5">
                        <connections>
                            <outlet property="leftBarButtonItem" destination="8kh-xe-6YB" id="yhg-a9-IOs"/>
                            <outlet property="rightBarButtonItem" destination="Iro-vB-ZyZ" id="hk8-QF-y50"/>
                        </connections>
                    </navigationItem>
                    <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
...
