...
            return cell!
        }else if(indexPath.section == 4){
            let cell = tableView.dequeueReusableCellWithIdentifier("Person")
            cell?.textLabel?.textColor = UIColor(red: 0, green: 111.0/255.0, blue: 220.0/225.0, alpha: 1.0)
            if(indexPath.row == 0){
                if(self.names.isEmpty){
                    cell?.textLabel?.text = "Tap to select recipients"
                }else{
                    cell?.textLabel?.text = "Tap to edit recipients"
                }
                cell?.detailTextLabel?.text = ""
                cell?.backgroundColor = UIColor.clearColor()
                return cell!
...
